kubernetes/b2cweb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: b2cweb
  namespace: legacy-modernization
  labels:
    app: b2cweb
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: b2cweb
